--- a/content/about.njk
+++ b/content/about.njk
@@ -130,8 +130,10 @@ nocache: reboot
 				<div class="bentobox__item">
 					<h2>Backstory</h2>
 					<p>An average mortal human, brimming with a plethora of hobbies and complexities. Grew up in the sticks in the South West of England, moved to Wales for the love of reading complicated road signs.</p>
-					<p>With dreams of running a small arts business, but settled as a frontend developer to pay the bills (also absolutely love it).</p>
-					<p>Currently a Senior Frontend Developer and Accessibility Specialist at a fast-paced private digital agency on a variety of clients. Working from home with an odd day in the office.</p>
+				</div>
+				<div class="bentobox__item">
+					<p>She had dreams of running a small arts business, but settled as a frontend developer to pay the bills (also absolutely love it).</p>
+					<p>Currently a Senior Frontend Developer and Accessibility Specialist at a fast-paced private digital agency, working on a variety of clients. Working from home with an odd day in the office.</p>
 				</div>
 			</div>
 
@@ -154,11 +156,11 @@ nocache: reboot
 					</ul>
 				</div>
 			</div>
-			<h2 class="visually-hidden">Favourites</h2>
+			<!-- <h2 class="visually-hidden">Favourites</h2>
 			<div class="bentobox__item bentobox--colour bentobox--center">
 				<span class="smolvalue">Favourite colour is</span>
 				<span class="bigvalue">pink</span>
-			</div>
+			</div> -->
 		</div>
 
 	</div>
