--- a/assets/css/components/_links.css
+++ b/assets/css/components/_links.css
@@ -1,9 +1,8 @@
 /* Links */
 .links:not(li) {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 1px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(176px, 1fr));
+  gap: 1rem;
   padding: 0;
   margin: 0 0 2rem
 }
@@ -21,8 +20,9 @@
 
 .links__image,
 .links__item {
-  width: 88px;
-  height: 31px;
+  aspect-ratio: 88 / 31;
+  width: 100%;
+  height: auto;
 }
 
 .links__image a,
@@ -39,8 +39,8 @@
 
 .links__image img {
   display: block;
-  width: 88px;
-  height: 31px;
+  width: 100%;
+  height: auto;
   image-rendering: pixelated;
 }
 
@@ -50,22 +50,21 @@
   background: #fff;
   overflow: hidden;
   word-break: normal;
-  padding: 0 4px;
+  padding: 0 calc(0.4rem + 2px);
   text-decoration: none;
   font-weight: 700;
-  font-size: 12px;
+  font-size: 1rem;
   line-height: 1.1;
   position: relative;
-  padding: 2px;
   backface-visibility: hidden;
 }
 
 .links__item a::before {
   content: '';
-  border-top: 2px solid white;
-  border-left: 2px solid white;
-  border-bottom: 2px solid black;
-  border-right: 2px solid black;
+  border-top: 0.4rem solid white;
+  border-left: 0.4rem solid white;
+  border-bottom: 0.4rem solid black;
+  border-right: 0.4rem solid black;
   position: absolute;
   top: 0;
   left: 0;
@@ -83,4 +82,9 @@
   transform: translate(2px, 2px) translateZ(0);
   text-decoration: none;
   z-index: 1;
+}
+
+.enbiggen {
+  width: 176px;
+  height: auto;
 }
