--- a/content/links.njk
+++ b/content/links.njk
@@ -13,13 +13,12 @@ scripts: '<script>
   if (t) {t.addEventListener("click", (function () {w.forEach((s => {s.classList.contains("links--highcontrast") ? (t.innerHTML = o, t.setAttribute("aria-pressed", !1), s.classList.remove("links--highcontrast")) : (t.innerHTML = c, t.setAttribute("aria-pressed", !0), s.classList.add("links--highcontrast"))}))}));}
 </script>'
 ---
-{% extends 'structure/templates/page-3col.njk'%}
+{% extends 'structure/templates/page-full.njk'%}
 
 {%- block left -%}
 {%- endblock -%}
 
 {%- block main -%}
-<h1>{{title}}</h1>
 
 {% set links = [
   {
@@ -42,8 +41,7 @@ scripts: '<script>
     "href": "https://divergentrays.com/",
     "src": "divergentrays.png",
     "type": "button"
-  },
-  {
+  }, {
     "name": "Dizzy",
     "href": "https://doctordizzy.space/",
     "src": "dizzy.png",
@@ -196,77 +194,66 @@ scripts: '<script>
   }, {
     "name": "Amber Wilson",
     "href": "https://amberwilson.co.uk/",
-    "size": "11px",
     "bg": "#b6d0f1",
     "color": "#4b0e90",
     "type": "link"
   }, {
     "name": "Eevis",
     "href": "https://eevis.codes/",
-    "size": "11px",
     "bg": "#e76f51",
     "color": "#0d0221",
     "type": "link"
   }, {
     "name": "jessica journals",
     "href": "https://jessicajournals.com",
-    "size": "11px",
     "bg": "#1e1e2e",
     "color": "#A5E3A1",
     "type": "link"
   }, {
     "name": "Kitty Giraudel",
     "href": "https://kittygiraudel.com/",
-    "size": "11px",
     "bg": "#d97eb4",
     "color": "#222222",
     "type": "link"
   }, {
     "name": "lolabee",
     "href": "https://lolabee.neocities.org/",
-    "size": "11px",
     "bg": "#facbd8",
     "color": "#4f3d46",
     "type": "link"
   }, {
     "name": "no happy nonsense",
     "href": "https://nohappynonsense.net/",
-    "size": "11px",
     "bg": "#fffaa1",
     "color": "black",
     "type": "link"
   }, {
     "name": "sleepy dev",
     "href": "https://sleepydev.neocities.org",
-    "size": "11px",
     "bg": "blueviolet",
     "color": "#f9f9f9",
     "type": "link"
   }, {
     "name": "Stephanie Eckles",
     "href": "https://thinkdobecreate.com/",
-    "size": "11px",
     "bg": "#7d4ce0",
     "color": "#fff",
     "type": "link"
   }, {
     "name": "Cassidy Williams",
     "href": "https://cassidoo.co",
-    "size": "11px",
     "bg": "rgb(235, 72, 136)",
     "color": "#fff",
     "type": "link"
   }, {
     "name": "Flamed Fury",
     "href": "https://flamedfury.com",
-    "size": "11px",
     "bg": "#252525",
     "color": "#de6b09",
     "type": "link"
   }, {
     "name": "Localghost",
     "href": "https://localghost.dev/",
-    "size": "11px",
     "bg": "#1a1a4d",
     "color": "#f00fe4",
     "type": "link"
@@ -318,7 +305,6 @@ scripts: '<script>
   }, {
     "name": "flower.codes",
     "href": "https://flower.codes/",
-    "size": "11px",
     "bg": "#9bbc0f",
     "color": "#222222",
     "type": "link"
@@ -327,6 +313,26 @@ scripts: '<script>
     "href": "https://metmoxie.com/",
     "src": "metmoxie.png",
     "type": "button"
+  }, {
+    "name": "Leilukin's hub",
+    "href": "https://leilukin.com/",
+    "src": "leilukin.png",
+    "type": "button"
+  }, {
+    "name": "Miq",
+    "href": "https://miq.neocities.org/",
+    "src": "miq.png",
+    "type": "button"
+  }, {
+    "name": "Marea",
+    "href": "https://marea.neocities.org/",
+    "src": "marea.png",
+    "type": "button"
+  }, {
+    "name": "Dimden",
+    "href": "https://dimden.dev/",
+    "src": "dimden.png",
+    "type": "button"
   }
 ] %}
 
@@ -334,44 +340,37 @@ scripts: '<script>
   {
     "name": "goth hoblin",
     "href": "https://gothhoblin.me",
-    "size": "12px",
     "bg": "#083820",
     "color": "#fff"
   },
   {
     "name": "not so miserable",
     "href": "https://www.thenotsomiserable.co.uk",
-    "size": "12px",
     "bg": "#5f0979",
     "color": "#fff"
   }, {
     "name": "Justin Blogs Again!",
     "href": "https://teafuellednonsense.wordpress.com",
-    "size": "10px",
     "bg": "#00aadc",
     "color": "#fff"
   }, {
     "name": "just nik",
     "href": "https://justnik.me/",
-    "size": "12px",
     "bg": "#2d3748",
     "color": "#fff"
   }, {
     "name": "owain.codes",
-    "href": "https://www.owain.codes/",
-    "size": "12px",
+    "href": "https://owain.codes/",
     "bg": "#222831",
     "color": "#b6ff00"
   }, {
     "name": "Alex Jegtnes",
     "href": "https://jegtnes.com/",
-    "size": "12px",
     "bg": "#a3001e",
     "color": "#fff"
   }, {
     "name": "Phil Wilson",
     "href": "https://philwilson.org/blog",
-    "size": "12px",
     "bg": "MediumSeaGreen",
     "color": "#222222"
   }
@@ -381,51 +380,32 @@ scripts: '<script>
   {
     "name": "cheyenne barton",
     "href": "https://cheyennebarton.com/",
-    "size": "12px",
     "bg": "#ffc929",
     "color": "#fa4723",
     "type": "link"
   }, {
     "name": "furry little peach",
     "href": "https://www.furrylittlepeach.com",
-    "size": "12px",
     "bg": "#f0490a",
     "color": "#fff",
     "type": "link"
-  }, {
-    "name": "girlscape",
-    "href": "https://www.patreon.com/girlscape",
-    "size": "13px",
-    "bg": "#ff91bb",
-    "color": "#fff",
-    "type": "link"
-  }, {
+  },{
     "name": "Leigh Ellexson",
     "href": "https://leighellexson.com",
-    "size": "12px",
     "bg": "#9bc18a",
     "color": "#fdfbf7",
     "type": "link"
   }, {
     "name": "pansy",
     "href": "https://www.pansy-shop.com",
-    "size": "16px",
     "bg": "#edd647",
     "color": "#220967",
     "type": "link"
   }, {
     "name": "paloma the peach",
     "href": "https://www.patreon.com/palomathepeach",
-    "size": "12px",
     "bg": "#feebb3",
     "color": "#212117",
-    "type": "link"
-  }, {
-    "name": "comfyco",
-    "href": "https://uncomfyco.com",
-    "size": "13px",
-    "bg": "#603814",
-    "color": "#fff",
     "type": "link"
   }
 ] %}
@@ -438,63 +418,54 @@ scripts: '<script>
   }, {
     "name": "base 64 image converter",
     "href": "https://www.base64-image.de/",
-    "size": "10px",
     "bg": "#dadad2",
     "color": "#e84c3d",
     "type": "link"
   }, {
     "name": "Can I Use",
     "href": "https://caniuse.com/",
-    "size": "14px",
     "bg": "#833502",
     "color": "#fff",
     "type": "link"
   }, {
     "name": "CSS tricks",
     "href": "https://css-tricks.com/",
-    "size": "14px",
     "bg": "#383838",
     "color": "#ff7a18",
     "type": "link"
   }, {
     "name": "CodePen",
     "href": "https://codepen.io/",
-    "size": "13px",
     "bg": "#1e1f26",
     "color": "#47cf73",
     "type": "link"
   }, {
     "name": "ezgif",
     "href": "https://ezgif.com",
-    "size": "14px",
     "bg": "#292929",
     "color": "#d9d9d9",
     "type": "link"
   }, {
     "name": "goblin tools",
     "href": "https://goblin.tools/",
-    "size": "14px",
     "bg": "limegreen",
     "color": "black",
     "type": "link"
   }, {
     "name": "image anonymizer",
     "href": "https://picdefacer.com/",
-    "size": "12px",
     "bg": "#5577ff",
     "color": "#fff",
     "type": "link"
   }, {
     "name": "SVG optimiser",
     "href": "https://jakearchibald.github.io/svgomg/",
-    "size": "12px",
     "bg": "#00bcd4",
     "color": "#000",
     "type": "link"
   }, {
     "name": "Tinypng",
     "href": "https://tinypng.com/",
-    "size": "12px",
     "bg": "#080706",
     "color": "#f7f3f0",
     "type": "link"
@@ -511,7 +482,6 @@ scripts: '<script>
   {
     "name": "marginalia",
     "href": "https://www.marginalia.nu/links/bookmarks/",
-    "size": "13px",
     "bg": "#444444",
     "color": "#fff",
     "type": "link"
@@ -519,7 +489,6 @@ scripts: '<script>
   {
     "name": "personalsit.es",
     "href": "https://personalsit.es/",
-    "size": "11px",
     "bg": "#f7f7f7",
     "color": "#030303",
     "type": "link"
@@ -527,7 +496,6 @@ scripts: '<script>
   {
     "name": "sizeof.cat",
     "href": "https://sizeof.cat/post/website-discovery/",
-    "size": "11px",
     "bg": "#1e1e2e",
     "color": "#5550ed",
     "type": "link"
@@ -535,7 +503,6 @@ scripts: '<script>
   {
     "name": "indieblog.page",
     "href": "https://indieblog.page/",
-    "size": "11px",
     "bg": "#212121",
     "color": "#ffb300",
     "type": "link"
@@ -543,14 +510,24 @@ scripts: '<script>
   {
     "name": "250KB Club",
     "href": "https://250kb.club/",
-    "size": "11px",
     "bg": "#222222",
     "color": "white",
     "type": "link"
   }
 ] %}
 
-<section class="reading-width">
+<div class="reading-width pb-1">
+  <p>Collquially known as a 'button wall', each brick will teleport you to a new site that I have enjoyed visiting. Take a look around, I hope you enjoy them too.</p>
+
+  <div class="button-group">
+    <button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
+    <a href="#awwshucks">Wanna link to my site?</a>
+  </div>
+
+</div>
+
+<section>
+  <h2 class="visually-hidden">Links to other websites</h2>
   <ul class="links">
     {% for link in links | sort(attribute="name") %}
     {% if link.type == "button" %}
@@ -561,7 +538,7 @@ scripts: '<script>
     </li>
     {% else %}
     <li class="links__item">
-      <a href="{{link.href}}" style="font-size: {{link.size}};  background-color: {{link.bg}}; color: {{link.color}};">
+      <a href="{{link.href}}" style="background-color: {{link.bg}}; color: {{link.color}};">
         {{link.name}}
       </a>
     </li>
@@ -569,15 +546,11 @@ scripts: '<script>
     {% endfor %}
     {% for friend in friends | sort(attribute="name") %}
     <li class="links__item">
-      <a href="{{friend.href}}" style="font-size: {{friend.size}};  background-color: {{friend.bg}}; color: {{friend.color}};">
+      <a href="{{friend.href}}" style="background-color: {{friend.bg}}; color: {{friend.color}};">
         {{friend.name}}
       </a>
     </li>
     {% endfor %}
-  </ul>
-
-  <h2>Creatives</h2>
-  <ul class="links">
     {% for creative in creatives | sort(attribute="name") %}
     <li class="links__item">
       <a href="{{creative.href}}" style="font-size: {{creative.size}};  background-color: {{creative.bg}}; color: {{creative.color}};">
@@ -585,10 +558,6 @@ scripts: '<script>
       </a>
     </li>
     {% endfor %}
-  </ul>
-
-  <h2>Tools & fun things</h2>
-  <ul class="links">
     {% for tool in tools | sort(attribute="name") %}
     {% if tool.type == "button" %}
     <li class="links__image">
@@ -604,10 +573,6 @@ scripts: '<script>
     </li>
     {% endif%}
     {% endfor %}
-  </ul>
-
-  <h2>Bookmarks & link lists</h2>
-  <ul class="links">
     {% for bookmark in bookmarks | sort(attribute="name") %}
     {% if bookmark.type == "button" %}
     <li class="links__image">
@@ -623,12 +588,10 @@ scripts: '<script>
     </li>
     {% endif%}
     {% endfor %}
-  </ul>
 
-  <button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
 </section>
-{%- endblock -%}
 
-{%- block right -%}
-{% include "structure/components/button.njk" %}
+<section id="awwshucks">
+  {% include "structure/components/button.njk" %}
+</section>
 {%- endblock -%}
