📍 Update buttons page

--- a/content/links.njk
+++ b/content/links.njk
@@ -517,7 +517,7 @@ scripts: '<script>
 ] %}
 
 <div class="reading-width pb-1">
-  <p>Collquially known as a 'button wall', each brick will teleport you to a new site that I have enjoyed visiting. Take a look around, I hope you enjoy them too.</p>
+  <p>Colloquially known as a 'button wall', each brick will teleport you to a new site that I have enjoyed visiting. Take a look around, I hope you enjoy them too.</p>
 
   <div class="button-group">
     <button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
