--- a/assets/css/pages/about.css
+++ b/assets/css/pages/about.css
@@ -35,10 +35,19 @@
   }
 }
 
+h1 {
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 /* Developement */
 
 .bigboibanner {
-  font-family:"Shrikhand", var(--font-family);
+  font-family: "Shrikhand", var(--font-family);
   font-size: clamp(10vw, 10vw, 195px);
   line-height: 1;
   text-transform: lowercase;
@@ -112,7 +121,7 @@
 }
 
 [class^="itsfrills-"] h2 {
-  font-family:"Shrikhand", var(--font-family);
+  font-family: "Shrikhand", var(--font-family);
   font-size: 2vw;
   font-size: clamp(1rem, 2vw, 1.5rem);
   font-weight: 400;
@@ -179,7 +188,7 @@
 }
 
 .charactersheet-stats>*>h3 {
-  font-family:"Shrikhand", var(--font-family);
+  font-family: "Shrikhand", var(--font-family);
   font-weight: 400;
   font-size: clamp(1rem, 1.5vw, 1.5rem);
   text-align: center;
@@ -191,7 +200,7 @@
 
 .bigstat,
 .smolstat {
-  font-family:"Shrikhand", var(--font-family);
+  font-family: "Shrikhand", var(--font-family);
   border-radius: 0.75rem;
   background: var(--about-color);
   color: var(--bg);
@@ -212,7 +221,7 @@
 
 .smolstat {
   font-size: 1rem;
-  font-family:var(--font-family);
+  font-family: var(--font-family);
   border-radius: 100px;
   border: var(--border-width) solid var(--bg);
   padding: 4px 10px 2px 10px;
