--- a/content/about.njk
+++ b/content/about.njk
@@ -41,151 +41,152 @@ scripts: '<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/c
 </script>'
 nocache: reboot
 ---
-{% extends 'structure/templates/page-empty.njk'%}
+{% extends 'structure/templates/page-full.njk'%}
 {% import "structure/components/components.njk" as macro with context %}
 
 {%- block main -%}
-<div class="container">
-	<h1 class="visually-hidden">About</h1>
+<h1 class="visually-hidden">About</h1>
 
 
-	{{ macro.callout(
-        element = 'aside',
-        modifiers = '',
-		emoji = '🛠️',
-		header = '<h2>Work in progress</h2>',
-        body = 'For the development of this page, I am working in the open! So you\'ll see it only partly built. There may be bugs or things might look weird on certain browsers or device widths. That\'s the beauty!') }}
+<div class="charactersheet">
 
-	<div class="charactersheet">
-
-		<div class="charactersheet-character">
-			<span class="bigboibanner">Internet witch</span>
-			<div class="whosthatgirl">
-				<div class="itsfrills-name">
-					<h2>Name</h2>
-					<p>Frills</p>
-				</div>
-				<div class="itsfrills-race">
-					<h2>Race</h2>
-					<p>Human</p>
-				</div>
-				<div class="itsfrills-level">
-					<h2>Level</h2>
-					<p>3X</p>
-				</div>
-				<div class="itsfrills-alignment">
-					<h2>Alignment</h2>
-					<p>Chaotic Good</p>
-				</div>
-				<div class="itsfrills-something">
-					<h2>Class</h2>
-					<p>Sorcerer</p>
-				</div>
+	<div class="charactersheet-character">
+		<span class="bigboibanner">Internet witch</span>
+		<div class="whosthatgirl">
+			<div class="itsfrills-name">
+				<h2>Name</h2>
+				<p>Frills</p>
 			</div>
-			<div class="piccy">
-				<img src="/images/avatars/andycarolan.png" alt="Avatar of a woman with brown hair, styled in spacebuns. Wearing pink dungarees and a pink top. In a simple line illustration style">
+			<div class="itsfrills-race">
+				<h2>Race</h2>
+				<p>Human</p>
+			</div>
+			<div class="itsfrills-level">
+				<h2>Level</h2>
+				<p>3X</p>
+			</div>
+			<div class="itsfrills-alignment">
+				<h2>Alignment</h2>
+				<p>Chaotic Good</p>
+			</div>
+			<div class="itsfrills-something">
+				<h2>Class</h2>
+				<p>Sorcerer</p>
 			</div>
 		</div>
-
-		<div class="charactersheet-stats mb-2">
-			<h2 class="visually-hidden">Stats</h2>
-			<div class="stat-str">
-				<h3>Strength</h3>
-				<p class="bigstat"><span class="visually-hidden">Ability score: </span>9</p>
-				<p class="smolstat"><span class="visually-hidden">Modifier: </span>-1</p>
-			</div>
-			<div class="stat-dex">
-				<h3>Dexterity</h3>
-				<p class="bigstat"><span class="visually-hidden">Ability score: </span>11</p>
-				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+0</p>
-			</div>
-			<div class="stat-con">
-				<h3>Constitution</h3>
-				<p class="bigstat"><span class="visually-hidden">Ability score: </span>15</p>
-				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+2</p>
-			</div>
-			<div class="stat-wis">
-				<h3>Wisdom</h3>
-				<p class="bigstat"><span class="visually-hidden">Ability score: </span>16</p>
-				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+3</p>
-			</div>
-			<div class="stat-int">
-				<h3>Intelligence</h3>
-				<p class="bigstat"><span class="visually-hidden">Ability score: </span>14</p>
-				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+2</p>
-			</div>
-			<div class="stat-cha">
-				<h3>Charisma</h3>
-				<p class="bigstat"><span class="visually-hidden">Ability score: </span>13</p>
-				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+1</p>
-			</div>
+		<div class="piccy">
+			<img src="/images/avatars/andycarolan.png" alt="Avatar of a woman with brown hair, styled in spacebuns. Wearing pink dungarees and a pink top. In a simple line illustration style">
 		</div>
-
-		<div class="bentobox">
-			<div class="bentobox-column-1">
-				<div class="bentobox__item bentobox--inspiration">
-					<button class="button" id="inspire">Inspiration</button>
-				</div>
-				<div class="bentobox__item bentobox--pronouns bentobox--center">
-					<h2 class="visually-hidden">Pronouns</h2>
-					<p>she/her</p>
-				</div>
-				<div class="bentobox__item">
-					<h2>Languages</h2>
-					<ul class="unstyled">
-						<li>English (native)</li>
-						<li>Welsh (beginner/dysgu)</li>
-					</ul>
-				</div>
-				<h2 class="visually-hidden">Get in contact</h2>
-				<div class="bentobox__item">
-					<a href="https://indieweb.social/@frills">@frills@indieweb.social</a>
-				</div>
-				<div class="bentobox__item">
-					fri11s [at] proton [dot] me
-				</div>
-				<div class="bentobox__item">
-					<a href="/guestbook">Leave a message</a>
-				</div>
-			</div>
-
-			<div class="bentobox--column-2">
-				<div class="bentobox__item">
-					<h2>Backstory</h2>
-					<p>An average mortal human, brimming with a plethora of hobbies and complexities. Grew up in the sticks in the South West of England, moved to Wales for the love of reading complicated road signs.</p>
-				</div>
-				<div class="bentobox__item">
-					<p>She had dreams of running a small arts business, but settled as a frontend developer to pay the bills (also absolutely love it).</p>
-					<p>Currently a Senior Frontend Developer and Accessibility Specialist at a fast-paced private digital agency, working on a variety of clients. Working from home with an odd day in the office.</p>
-				</div>
-			</div>
-
-			<div class="bentobox--column-2">
-				<div class="bentobox__item">
-					<h2>Inventory</h2>
-					<ul class="unstyled">
-						<li>🥕 Carrot seeds</li>
-						<li>🧥 Clothes, common</li>
-						<li>💍 Engagement band</li>
-						<li>🖋️ Ink pen</li>
-						<li>🍶 Perfume (vial)</li>
-						<li>⌨️ Mechanical keyboard</li>
-						<li>🍜 Ramen noodles</li>
-						<li>📚 Stack of half-used, heavily doodled notepads</li>
-						<li>📿 Silver amulet</li>
-						<li>🛠️ Tinker's Tools</li>
-						<li>💧 Waterskin</li>
-						<li>☕ Welsh Brew tea leaves</li>
-					</ul>
-				</div>
-			</div>
-			<!-- <h2 class="visually-hidden">Favourites</h2>
-			<div class="bentobox__item bentobox--colour bentobox--center">
-				<span class="smolvalue">Favourite colour is</span>
-				<span class="bigvalue">pink</span>
-			</div> -->
-		</div>
-
 	</div>
+
+	<div class="charactersheet-stats mb-2">
+		<h2 class="visually-hidden">Stats</h2>
+		<div class="stat-str">
+			<h3>Strength</h3>
+			<p class="bigstat"><span class="visually-hidden">Ability score: </span>9</p>
+			<p class="smolstat"><span class="visually-hidden">Modifier: </span>-1</p>
+		</div>
+		<div class="stat-dex">
+			<h3>Dexterity</h3>
+			<p class="bigstat"><span class="visually-hidden">Ability score: </span>11</p>
+			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+0</p>
+		</div>
+		<div class="stat-con">
+			<h3>Constitution</h3>
+			<p class="bigstat"><span class="visually-hidden">Ability score: </span>15</p>
+			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+2</p>
+		</div>
+		<div class="stat-wis">
+			<h3>Wisdom</h3>
+			<p class="bigstat"><span class="visually-hidden">Ability score: </span>16</p>
+			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+3</p>
+		</div>
+		<div class="stat-int">
+			<h3>Intelligence</h3>
+			<p class="bigstat"><span class="visually-hidden">Ability score: </span>14</p>
+			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+2</p>
+		</div>
+		<div class="stat-cha">
+			<h3>Charisma</h3>
+			<p class="bigstat"><span class="visually-hidden">Ability score: </span>13</p>
+			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+1</p>
+		</div>
+	</div>
+
+	<div class="bentobox">
+		<div class="bentobox-column-1">
+			<div class="bentobox__item bentobox--inspiration">
+				<button class="button" id="inspire">Inspiration</button>
+			</div>
+			<div class="bentobox__item bentobox--pronouns bentobox--center">
+				<h2 class="visually-hidden">Pronouns</h2>
+				<p>she/her</p>
+			</div>
+			<div class="bentobox__item">
+				<h2>Languages</h2>
+				<ul class="unstyled">
+					<li>English (native)</li>
+					<li>Welsh (beginner/dysgu)</li>
+				</ul>
+			</div>
+			<h2 class="visually-hidden">Get in contact</h2>
+			<div class="bentobox__item">
+				<a href="https://indieweb.social/@frills">@frills@indieweb.social</a>
+			</div>
+			<div class="bentobox__item">
+				fri11s [at] proton [dot] me
+			</div>
+			<div class="bentobox__item">
+				<a href="/guestbook">Leave a message</a>
+			</div>
+		</div>
+
+		<div class="bentobox--column-2">
+			<div class="bentobox__item">
+				<h2>Backstory</h2>
+				<p>An average mortal human, brimming with a plethora of hobbies and complexities. Grew up in the sticks in the South West of England, moved to Wales for the love of reading complicated road signs, family heritage and for love itself.</p>
+			</div>
+			<div class="bentobox__item">
+				<p>Once upon a time, Frills had dreams of running a small arts business, but trained and settled as a frontend developer to pay the bills.</p>
+				<p>Currently employed as a Senior Frontend Developer and Accessibility Specialist at a fast-paced private digital agency, developing for a wide variety of clients. She works from home with an odd day in the office, when the wind blows in the right direction and the stars align correctly.</p>
+			</div>
+		</div>
+
+		<div class="bentobox--column-2">
+			<div class="bentobox__item">
+				<h2>Inventory</h2>
+				<ul class="unstyled">
+					<li>🧥 Clothes, common</li>
+					<li>💍 Engagement band</li>
+					<li>🥕 Handful of carrot seeds</li>
+					<li>🖋️ Ink pen</li>
+					<li>🍶 Perfume (vial)</li>
+					<li>🪢 Leash (dog)</li>
+					<li>⌨️ Mechanical keyboard</li>
+					<li>🍜 Packets of ramen noodles</li>
+					<li>📿 Silver amulet</li>
+					<li>📚 Stack of half-used, heavily doodled notepads</li>
+					<li>🫘 Small bag of snacks</li>
+					<li>🎮 Entertainment device (Steam deck)</li>
+					<li>🛠️ Tinker's Tools</li>
+					<li>💧 Waterskin</li>
+					<li>☕ Welsh Brew tea leaves</li>
+				</ul>
+			</div>
+		</div>
+		<!-- <h2 class="visually-hidden">Favourites</h2>
+		<div class="bentobox__item bentobox--colour bentobox--center">
+			<span class="smolvalue">Favourite colour is</span>
+			<span class="bigvalue">pink</span>
+		</div> -->
+	</div>
+
 </div>
+
+{{ macro.callout(
+	element = 'aside',
+	modifiers = '',
+	emoji = '🛠️',
+	header = '<h2>Work in progress</h2>',
+	body = 'For the development of this page, I am working in the open! So you\'ll see it only partly built. There may be bugs or things might look weird on certain browsers or device widths. That\'s the beauty!') }}
 {%- endblock -%}
