📍 Update buttons page

--- a/content/links.njk
+++ b/content/links.njk
@@ -316,7 +316,7 @@ scripts: '<script>
   }, {
     "name": "Leilukin's hub",
     "href": "https://leilukin.com/",
-    "src": "leilukin.png",
+    "src": "leilukins-hub.png",
     "type": "button"
   }, {
     "name": "Miq",
