--- a/content/index.njk
+++ b/content/index.njk
@@ -127,7 +127,8 @@ scripts: '
 					<small class="d-b subtext">2nd playthrough</small>
 				</li>
 				<li>
-					Cats Organized Neatly
+Dead Letter Society
+		<small class="d-b subtext">Co-op tabletop RPG</small>
 				</li>
 			</ol>
 			'
