--- a/content/index.njk
+++ b/content/index.njk
@@ -93,7 +93,7 @@ scripts: '
 			'
 		)}}
 	</div>
-	<div class="dashboard__item d-n">
+	<div class="dashboard__item">
 		{{ macro.callout(
 			element = 'article',
 			modifiers = 'callout--small',
@@ -104,6 +104,10 @@ scripts: '
 				<li>
 					<a href="https://www.goodreads.com/book/show/76713323-empire-of-storms" class="hidden">Empire of Storms - Sarah J Maas</a>
 					<small class="d-b subtext">Started 14th Jan 2024</small>
+				</li>
+				<li>
+					<a href="https://www.goodreads.com/book/show/61242426-legends-lattes" class="hidden">Legends & Lattes - Travis Baldree</a>
+					<small class="d-b subtext">Started 12th Jun 2024</small>
 				</li>
 			</ol>
 			'
@@ -123,12 +127,8 @@ scripts: '
 					<small class="d-b subtext">Frills of Hiraeth Farm (co-op)</small>
 				</li>
 				<li>
-					The Gardens Between
-					<small class="d-b subtext">2nd playthrough</small>
-				</li>
-				<li>
-Dead Letter Society
-		<small class="d-b subtext">Co-op tabletop RPG</small>
+					Dead Letter Society
+					<small class="d-b subtext">Co-op tabletop RPG</small>
 				</li>
 			</ol>
 			'
