🧪 Update submission for 32bit.cafe: Destination Vacation

--- a/content/experiments/hiraeth.njk
+++ b/content/experiments/hiraeth.njk
@@ -7,6 +7,10 @@ kudos: 🏠
 image: '/images/experiments/hiraeth/hiraeth-cover.png'
 page_layout: 'empty'
 style: '@import url("https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css");
+.splide {
+    max-width: 1600px;
+    margin: auto;
+}
 ul.splide__list,
 ul.splide__pagination {
     flex-direction: row
@@ -61,6 +65,7 @@ ul.splide__pagination {
 
 .splide__overlay img {
     max-width: 80%;
+    width: 700px;
     object-fit: contain;
     filter: drop-shadow(0 0 1rem black);
 }
@@ -103,61 +108,61 @@ scripts: '
   <div class="splide__track">
 		<ul class="splide__list">
 			<li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-1.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-1.png" alt="Deep blue sea with white seam foam surrounds a small outcrop on a bright and sunny day." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-2.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-2.png" alt="The steel arches and cables of Severn bridge crossing between England and Wales." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-3.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-3.png" alt="A orangey pink sun set with a river and trees in the foreground, dimly lit." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-4.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-4.png" alt="A footpath tunnel that is created out of living trees with no leaves." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-5.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-5.png" alt="A worn path between fields of long wheat colour grasses on an overcast day." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-6.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-6.png" alt="Sandy cliff edge with coastal flowers either side of a worn path. The sea is in the background." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-7.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-7.png" alt="People snorkel underwater, with coral and fishes in the foreground." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-8.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-8.png" alt="A welsh street with red and white bunting between the buildings. A welsh flag hangs from a window on the first floor." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-9.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-9.png" alt="A grass field wraps around a lake, with trees lining the edge, undulating hills in the background are lit up orange during the golden hour." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-10.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-10.png" alt="Looking down a road on a hill, following a bricked wall with plants growing over the top and inset garden gates. Trees from a nearby woodland peak above the wall as they rise back up the hill on the other side." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-11.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-11.png" alt="A single track road runs through a dark tunnel, lights are dotted along on either side of the walls to provide visibility." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-12.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-12.png" alt="Upwards shot at tall trees as if taken from the ground. The blue sky and sun peak through the top branches." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-13.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-13.png" alt="A wooden boardwalk runs through flora, and disappears into a line of orange trees, lit by the golden hour sun." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-14.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-14.png" alt="Fog envelopes a footpath which meanders down a coastal path. Green and brown flora surround the path, with a sliver of the sea on the left hand side." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-15.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-15.png" alt="Glastonbury tor sits atop it's hill in the centre of the image. An untrodden path goes towards it." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-16.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-16.png" alt="A coastal path with cliffs off to the left, and a few yachts float in the sea." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-17.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-17.png" alt="A forest sprawls out down the side of a mountain, snow covers the stoney ground between the trees. A large snowy mountain sits in the background." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-18.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-18.png" alt="Car tyre tracks melt the snow that has blanket an urban street, a yellow stone house sits on the left and parked cars line the right." loading="lazy">
             </li>
             <li class="splide__slide">
-                <img src="/images/experiments/hiraeth/hiraeth-19.png" alt="Great alt text" loading="lazy">
+                <img src="/images/experiments/hiraeth/hiraeth-19.png" alt="A fallen leaf and dirt covered path between sheets of bluebells and trees." loading="lazy">
             </li>
 		</ul>
   </div>
@@ -174,7 +179,7 @@ scripts: '
             <p>The bubbles that rise in your chest as you meander through quiet, mossy woodland.</p>
             <p>The ache of driving along old tarmac, the paths and bus stops and parks much closer together than your memory recalls.</p>
             <p>The knot in your throat as you thumb through old photographs of places and people gone by.</p>
-            <p>The feeling of belonging and longing and homesickness for something that is no longer or has never been.</p>
+            <p class="mb-2">The feeling of belonging and longing and homesickness for something that is no longer or has never been.</p>
             <svg viewBox="0 0 464 149" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M158.262 38.2931V82.0748C158.262 90.7387 161.497 96.3992 166.464 96.3992H166.695V97.6699H137.585V96.3992H137.816C142.783 96.3992 146.133 90.7387 146.133 82.0748V56.0831C146.133 47.5346 142.783 41.7587 137.816 41.7587H137.585V40.6035C148.559 40.3725 156.299 40.1414 155.721 26.5102C155.028 14.4962 148.443 1.32706 132.502 1.32706C121.296 1.32706 111.939 7.91165 110.784 19.8101C112.17 17.7308 114.481 16.3445 117.369 16.3445C121.643 16.3445 125.224 19.9256 125.224 24.1998C125.224 28.5895 121.643 32.0551 117.369 32.0551C112.979 32.0551 109.398 28.9361 109.398 21.5429C109.398 9.18235 119.102 0.171875 132.733 0.171875C150.754 0.171875 158.262 15.998 158.262 36.9069C159.764 37.9466 161.15 38.4087 162.421 38.4087C163.998 38.4087 165.528 37.8583 167.194 37.2586C169.19 36.5405 171.382 35.7517 174.089 35.7517C177.323 35.7517 182.868 36.6759 185.756 40.8345C188.991 45.2243 186.68 49.614 183.33 51.0002C182.521 51.3468 181.713 51.5778 180.789 51.5778C177.785 51.5778 174.782 49.1519 175.244 42.7984C175.264 42.5941 175.288 42.3808 175.313 42.1617C175.568 39.9023 175.892 37.0224 173.049 37.0224C171.705 37.0224 170.086 37.5728 168.355 38.1613C166.365 38.8374 164.228 39.5638 162.19 39.5638C160.804 39.5638 159.533 39.2173 158.262 38.2931ZM132.848 96.3992H133.079V97.6699H103.969V96.3992H104.2C109.167 96.3992 112.517 90.7387 112.517 82.0748V56.0831C112.517 47.5346 109.167 41.7587 104.2 41.7587H103.969V40.6035C111.939 40.3725 116.56 39.6794 124.646 36.9069V82.0748C124.646 90.7387 127.881 96.3992 132.848 96.3992ZM305.98 50.0761C305.98 58.1087 297.828 61.6604 289.405 65.3301C280.991 68.9961 272.306 72.7798 271.209 81.2662C274.097 89.3525 279.411 93.9733 286.342 93.9733C294.659 93.9733 301.591 87.2732 303.208 76.992H304.363C303.208 90.1611 294.775 98.8251 282.414 98.8251C267.05 98.8251 256.076 85.5404 256.076 67.1729C256.076 48.3433 267.628 35.7517 285.071 35.7517C289.23 35.7517 293.042 36.4448 296.161 37.7155C293.042 32.2861 292.002 25.7016 292.002 21.1963C292.002 8.37372 299.396 0.171875 313.027 0.171875C325.618 0.171875 333.936 7.21853 333.936 18.6549V36.9069H347.914V38.1776H333.936V78.4937C333.936 88.1973 335.438 94.6664 340.867 94.6664C344.333 94.6664 346.874 91.6629 349.3 86.349L350.224 87.5042L350.222 87.5088C348.258 91.7834 345.023 98.8251 336.362 98.8251C327.582 98.8251 321.806 91.7784 321.806 81.2662V38.1776H312.68V36.9069H313.489C324.463 36.9069 331.51 29.0516 331.51 18.3084C331.51 7.79612 324.925 1.32706 313.027 1.32706C300.204 1.32706 293.273 9.06684 293.273 21.4274C293.273 26.0481 294.197 33.2103 298.24 38.6397C302.977 41.1811 305.98 45.2243 305.98 50.0761ZM270.516 78.9558C272.184 71.9597 277.362 69.0502 282.418 66.2095C288.215 62.9524 293.851 59.7857 293.851 50.6537C293.851 42.7984 289.692 36.9069 283.107 36.9069C274.444 36.9069 268.783 47.4191 268.783 64.2849C268.783 69.8298 269.476 74.7971 270.516 78.9558ZM382.935 96.3982H383.166V97.6689H354.055V96.3982H354.286C359.253 96.3982 362.488 90.7378 362.488 82.0738V31.8231C362.488 23.2747 359.253 17.4987 354.286 17.4987H354.055V16.3435C362.026 16.1125 366.647 15.3039 374.733 12.6469V52.0389C377.39 46.8406 383.628 35.7507 396.45 35.7507C406.616 35.7507 412.392 42.7974 412.392 53.3096V82.0738C412.392 93.8568 414.125 104.253 417.128 112.455C425.908 110.145 434.341 108.759 442.311 108.759C453.517 108.759 463.913 111.647 463.913 122.505C463.913 131.285 457.329 137.638 445.777 137.638C433.07 137.638 418.861 129.899 409.735 115.805C402.619 117.931 395.208 120.352 387.796 122.773L387.795 122.774C385.942 123.379 384.09 123.984 382.242 124.585C386.516 127.357 390.097 130.592 392.869 133.595C399.454 140.988 397.375 145.263 394.602 147.111C393.678 147.689 392.638 148.035 391.599 148.035C388.018 148.035 384.321 144.223 384.09 138.216C383.743 133.595 381.548 129.437 378.198 125.971C363.99 130.476 349.896 134.057 336.727 134.057C325.868 134.057 313.854 131.631 313.854 120.657C313.854 110.954 323.096 107.488 332.453 107.488C345.853 107.488 366.415 114.65 380.855 123.892C384.919 122.603 388.983 121.23 393.028 119.862L393.029 119.862C398.413 118.042 403.765 116.233 409.042 114.65C403.728 105.871 400.263 95.012 400.263 82.0738V56.0821C400.263 46.3785 396.45 40.0249 390.559 40.0249C385.014 40.0249 378.892 45.8009 374.733 54.6958V82.0738C374.733 90.7378 377.967 96.3982 382.935 96.3982ZM377.274 124.931C365.838 114.073 342.734 108.759 331.644 108.759C323.673 108.759 315.01 111.647 315.01 120.542C315.01 130.823 326.677 132.902 336.727 132.902C349.665 132.902 363.412 129.321 377.274 124.931ZM417.59 113.611C423.251 128.166 433.301 136.368 446.239 136.368C456.867 136.368 462.758 130.592 462.758 122.737C462.758 112.34 452.593 109.914 442.427 109.914C434.572 109.914 426.139 111.416 417.59 113.611ZM239.717 83.3429V52.0373C239.717 42.4492 232.208 35.9801 215.227 35.9801C206.447 35.9801 196.05 37.7129 196.05 43.8354C196.05 48.8885 202.917 51.5438 209.01 53.8998C213.781 55.7449 218.078 57.4065 218.23 59.8925C216.959 59.4305 215.573 59.3149 214.187 59.3149C203.79 59.3149 191.661 70.4048 191.661 82.8808C191.661 92.8154 199.4 98.1293 208.411 98.1293C217.652 98.1293 224.815 92.6999 227.587 87.0395C227.934 96.8586 233.594 98.9379 238.446 98.9379C246.867 98.9379 249.337 92.3477 250.951 88.0379C251.02 87.8548 251.087 87.6758 251.153 87.5016L250.344 86.3464C248.265 91.6602 246.532 94.6637 243.529 94.6637C241.334 94.6637 239.717 93.0465 239.717 83.3429ZM218.808 61.2788L219.501 60.3546C219.501 56.7985 216.191 54.8421 212.806 52.8412C209.263 50.7473 205.638 48.6045 205.638 44.5285C205.638 39.0991 211.992 36.9043 216.728 36.9043C224.584 36.9043 227.587 43.2578 227.587 51.6907V82.5342C227.587 89.0033 220.425 93.2775 215.342 93.2775C209.22 93.2775 204.252 87.0395 204.252 78.26C204.252 71.6755 206.909 61.2788 218.808 61.2788ZM53.5383 96.3982H53.3072C48.3399 96.3982 45.1054 90.7378 45.1054 82.0738V57.9304C56.1952 58.97 67.4005 57.1217 77.2196 52.3855V82.0738C77.2196 90.7378 73.9851 96.3982 69.0178 96.3982H68.7868V97.6689H99.0527V96.3982H98.8217C93.8544 96.3982 90.6199 90.7378 90.6199 82.0738V28.242C90.6199 19.5781 93.8544 13.9177 98.8217 13.9177H99.0527V12.6469H68.7868V13.9177H69.0178C73.9851 13.9177 77.2196 19.5781 77.2196 28.242V50.9992C67.4005 55.7355 56.1952 57.5838 45.1054 56.6597V28.242C45.1054 19.5781 48.3399 13.9177 53.3072 13.9177H53.5383V12.6469H22.4637C14.1463 12.6469 0.746094 16.5746 0.746094 31.0145C0.746094 38.0611 4.78926 50.7682 13.5687 50.7682C15.186 50.7682 16.6877 50.3061 17.7274 49.4975C20.9619 46.9561 20.9619 40.6025 13.2221 40.1405C8.02379 39.9094 2.82544 36.5594 2.82544 28.9351C2.82544 17.3832 14.8394 13.9177 22.5792 13.9177H23.5033C28.4706 13.9177 31.7052 19.5781 31.7052 28.242V82.0738C31.7052 90.7378 28.4706 96.3982 23.5033 96.3982H23.1568V97.6689H53.5383V96.3982Z" fill="#715411"/>
                 </svg>
@@ -182,11 +187,6 @@ scripts: '
 
         <p>Submission for the <a href="https://tilde.32bit.cafe/~ribose/events/destination/">32bit.cafe Community Code Jam #4: Destination Vacation</a>.</p>
         </div>
-
-        <aside class="h-sm">
-            <h2>Notes</h2>
-            <p>Image alt text to be added</p>
-        </aside>
     </div>
 </div>
 {% endblock %}
