📚 Update currently reading

--- a/content/index.njk
+++ b/content/index.njk
@@ -102,8 +102,8 @@ scripts: '
 			body = '
 			<ol class="unstyled mb-0">
 				<li>
-					<a href="https://www.goodreads.com/book/show/76713323-empire-of-storms" class="hidden">Empire of Storms - Sarah J Maas</a>
-					<small class="d-b subtext">Started 14th Jan 2024</small>
+					<a href="https://www.goodreads.com/book/show/76714487-tower-of-dawn" class="hidden">Tower of Dawn - Sarah J Maas</a>
+					<small class="d-b subtext">Started 18th Jun 2024</small>
 				</li>
 				<li>
 					<a href="https://www.goodreads.com/book/show/61242426-legends-lattes" class="hidden">Legends & Lattes - Travis Baldree</a>
